Gestion login/register avec email

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -6,7 +6,8 @@ error.message=Message:
 
 # Activation e-mail
 email.activation.title=sejour account activation
-email.activation.greeting=Dear {0}
+email.activation.greeting=Hello,
+email.activation.link=Activate your account
 email.activation.text1=Your sejour account has been created, please click on the URL below to activate it:
 email.activation.text2=Regards,
 email.signature=sejour Team.
