--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -6,7 +6,8 @@ error.message=Message:
 
 # Activation e-mail
 email.activation.title=Activation de votre compte sejour
-email.activation.greeting=Cher {0}
+email.activation.greeting=Bonjour,
+email.activation.link=Activer votre compte
 email.activation.text1=Votre compte sejour a été créé, pour l'activer merci de cliquer sur le lien ci-dessous:
 email.activation.text2=Cordialement,
 email.signature=sejour.
