page accueil usager

--- a/src/main/webapp/i18n/en/register.json
+++ b/src/main/webapp/i18n/en/register.json
@@ -2,6 +2,9 @@
     "register": {
         "title": "Registration",
         "form": {
+            "type": "I am",
+            "type.company" : "a company",
+            "type.person" : "a person",
             "button": "Register"
         },
         "messages": {
