--- a/src/main/webapp/i18n/en/main.json
+++ b/src/main/webapp/i18n/en/main.json
@@ -1,9 +1,12 @@
 {
     "main": {
-        "title": "Welcome !",
-        "subtitle": "This is your homepage",
-        "logged": {
-            "message": "You are logged in as user \"{{username}}\"."
+        "title": {
+	        "study": "I want to <strong>study</strong> in France",
+	        "work": "I want to <strong>work</strong> in France",
+	        "family": "I want to <strong>get my family</strong> in France",
+	        "extend": "I want to <strong>extend my stay</strong> in France",
+	        "user.account": "I want to <strong>manage my personal account</strong>",
+	        "request.inprogress": "I want to <strong>follow</strong> my request"
         }
     }
 }
