--- a/src/main/webapp/i18n/fr/main.json
+++ b/src/main/webapp/i18n/fr/main.json
@@ -1,9 +1,12 @@
 {
     "main": {
-        "title": "Bienvenue !",
-        "subtitle": "Ceci est votre page d'accueil",
-        "logged": {
-            "message": "Vous êtes connecté en tant que \"{{username}}\"."
+        "title": {
+	        "study": "Je veux <strong>étudier</strong> en France",
+	        "work": "Je veux <strong>travailler</strong> en France",
+	        "family": "Je veux <strong>faire venir ma famille</strong> en France",
+	        "extend": "Je veux <strong>prolonger mon séjour</strong> en France",
+	        "user.account": "Je veux <strong>gérer mon compte personnel</strong>",
+	        "request.inprogress": "Je veux <strong>suivre</strong> ma demande"
         }
     }
 }
