--- a/src/main/webapp/i18n/fr/main.json
+++ b/src/main/webapp/i18n/fr/main.json
@@ -1,8 +1,8 @@
 {
     "main": {
         "title": {
-	        "study": "Je veux <strong>étudier</strong> en France",
-	        "work": "Je veux <strong>travailler</strong> en France",
+	        "study": "Je veux venir <strong>étudier</strong> en France",
+	        "work": "Je veux venir <strong>travailler</strong> en France",
 	        "family": "Je veux <strong>faire venir ma famille</strong> en France",
 	        "extend": "Je veux <strong>prolonger mon séjour</strong> en France",
 	        "user.account": "Je veux <strong>gérer mon compte personnel</strong>",
