--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -8,6 +8,8 @@
                 "main": "Entities",
                 "demande": "Demande",
                 "identity": "Identity",
+                "address": "Address",
+                "project": "Project",
                 "additionalEntity": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
