--- a/src/main/webapp/i18n/fr/etudier.json
+++ b/src/main/webapp/i18n/fr/etudier.json
@@ -4,7 +4,8 @@
         "button": {
         	"start": "Démarrer",
         	"continue": "Continuer",
-        	"back": "Retour"
+        	"back": "Retour",
+        	"payment": "Valider le paiement"
         },
     	"information" : {
     		"title": "Information",
@@ -67,8 +68,15 @@
     	"payment" : {
     		"title": "Paiement",
     		"form": {
-    			"title": ""
+    			"title": "Payez vos frais de dossier et pré-payez votre droit de timbre et vos taxes de séjour",
+    			"cardOwner": "Propriétaire de la carte",
+    			"cardNumber": "Numéro de carte",
+    			"cardExpiringDate": "Date d'expiration",
+    			"cardCV": "Code de vérification"
     		}
+    	},
+    	"recap": {
+    		"title": "Paiement"
     	},
     	"campus": {
 	        "title": "Je veux venir étudier en France",
