amélioration navbar + texte etudier

--- a/src/main/webapp/i18n/fr/main.json
+++ b/src/main/webapp/i18n/fr/main.json
@@ -6,7 +6,7 @@
 	        "family": "Je veux <strong>faire venir ma famille</strong> en France",
 	        "extend": "Je veux <strong>prolonger mon séjour</strong> en France",
 	        "user.account": "Je veux <strong>gérer mon compte personnel</strong>",
-	        "follow": "Je veux <strong>suivre</strong> ma demande"
+	        "follow": "Je veux <strong>suivre ma demande</strong>"
         }
     }
 }
