--- a/src/main/webapp/i18n/en/etudier.json
+++ b/src/main/webapp/i18n/en/etudier.json
@@ -97,6 +97,20 @@
 	        		"no": "No"
 	        	}
 	        }
+	    },
+	    "validation": {
+	    	"title": "{{studentName}} - Request for study",
+	    	"identity": "Identity",
+	    	"preinscription": "(Pre)Inscription",
+	    	"project": "Project",
+	    	"documents": "Originals documents",
+	    	"biometrics": "Biometrics",
+	    	"policeControl": "Police control",
+	    	"history": "SIEF History",
+	    	"button": {
+	    		"accept": "Accept residence permit",
+	    		"decline": "Decline residence permit"
+	    	}
 	    }
     }
 }
