--- a/src/main/webapp/i18n/en/main.json
+++ b/src/main/webapp/i18n/en/main.json
@@ -4,9 +4,12 @@
 	        "study": "I want to <strong>study</strong> in France",
 	        "work": "I want to <strong>work</strong> in France",
 	        "family": "I want to <strong>get my family</strong> in France",
-	        "extend": "I want to <strong>extend my stay</strong> in France",
+	        "asile": "I want to <strong>seek asylum</strong> in France",
+	        "nationality": "I want to <strong>acquire French nationality</strong>",
+	        "visit": "I want to <strong>visit</strong> France",
 	        "user.account": "I want to <strong>manage my personal account</strong>",
-	        "follow": "I want to <strong>follow my request</strong>"
+	        "follow": "I want to <strong>follow my applications</strong>",
+	        "employ": "I want to <strong>employ a foreign</strong> in France"
         }
     }
 }
