--- a/src/main/webapp/i18n/en/address.json
+++ b/src/main/webapp/i18n/en/address.json
@@ -1,30 +1,26 @@
 {
-    "sejourApp": {
-        "address" : {
-            "home": {
-                "title": "Addresss",
-                "createLabel": "Create a new Address",
-                "createOrEditLabel": "Create or edit a Address"
-            },
-            "created": "A new Address is created with identifier {{ param }}",
-            "updated": "A Address is updated with identifier {{ param }}",
-            "deleted": "A Address is deleted with identifier {{ param }}",
-            "delete": {
-                "question": "Are you sure you want to delete Address {{ id }}?"
-            },
-            "detail": {
-                "title": "Address"
-            },
-            "owner": "Owner",
-            "number": "Number",
-            "street": "Street",
-            "complement": "Complement",
-            "postalCode": "PostalCode",
-            "city": "City",
-            "country": "Country",
-            "phone": "Phone",
-            "email": "Email",
-            "contactType": "ContactType"
-        }
-    }
+	"address" : {
+		"form": {
+			"comingDate": "Arrival date in France",
+			"title": "Confirm your address",
+			"owner": "Owner",
+			"number": "Street Number",
+			"street": "Street",
+			"complement": "Complement",
+			"postalCode": "Postal Code",
+			"city": "City",
+			"country": "Country",
+			"phone": "Phone",
+			"email": "Email",
+			"contactType": "Prefered Contact",
+			"contactType.tooltip": "Your preferred contact method will be used to inform you about the progress of your request."
+		},
+		"french" : {
+			"form" : {
+				"title": "My arrival in France",
+				"button": "Confirm my arrival in France"
+			}
+		}
+	}
 }
+
