--- a/src/main/webapp/i18n/en/project.json
+++ b/src/main/webapp/i18n/en/project.json
@@ -1,29 +1,19 @@
 {
-    "sejourApp": {
-        "project" : {
-            "home": {
-                "title": "Projects",
-                "createLabel": "Create a new Project",
-                "createOrEditLabel": "Create or edit a Project"
-            },
-            "created": "A new Project is created with identifier {{ param }}",
-            "updated": "A Project is updated with identifier {{ param }}",
-            "deleted": "A Project is deleted with identifier {{ param }}",
-            "delete": {
-                "question": "Are you sure you want to delete Project {{ id }}?"
-            },
-            "detail": {
-                "title": "Project"
-            },
-            "comingDate": "ComingDate",
-            "university": "University",
-            "training": "Training",
-            "trainingStart": "TrainingStart",
-            "trainingLength": "TrainingLength",
-            "resourceType": "ResourceType",
-            "resourceAmount": "ResourceAmount",
-            "resourceProof": "ResourceProof",
-            "inscriptionCertificate": "InscriptionCertificate"
-        }
-    }
+	"project" : {
+		"form": {
+			"title": "Confirm your project details",
+			"comingDate": "Arrival date in France",
+			"university": "University",
+			"training": "Training",
+			"trainingStart": "Traning start date",
+			"trainingLength": "Training lenght (month)",
+			"resourceType": "Resource type",
+			"resourceAmount": "Resource amount (euros)",
+            "document.title": "Attach your documents",
+            "resourceProof": "Resource proof",
+            "resourceProof.placeholder": "Click or drag your proof here...",
+            "inscriptionCertificate": "Inscription certificate",
+            "inscriptionCertificate.placeholder": "Click or drag your certificate here..."
+		}
+	}
 }
