--- a/src/main/webapp/i18n/fr/etudier.json
+++ b/src/main/webapp/i18n/fr/etudier.json
@@ -1,6 +1,23 @@
 {
     "etudier": {
         "title": "Demande de séjour étudiant",
+        "step.title": "4 étapes pour déposer votre demande",
+        "identity": {
+        	"step.short": "Etat-civil",
+        	"step.long": "Validez votre état-civil et vos informations personnelles"
+        },
+        "address": {
+        	"step.short": "Coordonnées",
+        	"step.long": "Validez vos coordonnées"
+        },
+        "project": {
+        	"step.short": "Projet",
+        	"step.long": "Validez les détails de votre projet"
+        },
+        "payment": {
+        	"step.short": "Paiement",
+        	"step.long": "Payez vos frais de dossier et pré-payez votre droit de timbre et vos taxes de séjour"
+        },
         "button": {
         	"start": "Démarrer",
         	"continue": "Continuer",
@@ -8,95 +25,6 @@
         	"payment": "Valider le paiement",
         	"end": "Terminer"
         },
-    	"information" : {
-    		"title": "Information",
-    		"subtitle": "4 étapes pour déposer votre demande"
-    	},
-    	"identity" : {
-    		"title": "Etat-civil",
-    		"form": {
-    			"title": "Validez votre état-civil et vos informations personnelles",
-	            "lastName": "Nom",
-	            "usedLastName": "Nom d'usage",
-	            "firstName": "Prénom(s)",
-	            "sex": "Sexe",
-	            "birthDate": "Date de naissance",
-	            "birthCity": "Ville de naissance",
-	            "birthCountry": "Pays de naissance",
-	            "nationality": "Nationalité",
-	            "passportNumber": "Numéro de passeport",
-	            "document.title": "Joignez vos pièces justificatives d'état-civil",
-	            "passport": "Passeport",
-	            "passport.placeholder": "Cliquer ou déposer votre passeport ici...",
-	            "birthAct": "Acte de naissance",
-	            "birthAct.placeholder": "Cliquer ou déposer votre acte de naissance ici..."
-    		}
-    	},
-    	"address" : {
-    		"title": "Coordonnées",
-    		"form": {
-    			"title": "Validez vos coordonnées",
-    			"owner": "Chez",
-    			"number": "Numéro de voie",
-    			"street": "Voie",
-    			"complement": "Complément",
-    			"postalCode": "Code postal",
-    			"city": "Ville de résidence",
-    			"country": "Pays de résidence",
-    			"phone": "Téléphone",
-    			"email": "Email",
-    			"contactType": "Moyen de contact préféré"
-    		}
-    	},
-    	"project" : {
-    		"title": "Projet",
-    		"form": {
-    			"title": "Validez les détails de votre projet",
-    			"comingDate": "Date prévue d'arrivée en France",
-    			"university": "Etablissement",
-    			"training": "Formation",
-    			"trainingStart": "Date de début de la formation",
-    			"trainingLength": "Durée de la formation (mois)",
-    			"resourceType": "Type de resource",
-    			"resourceAmount": "Montant des resources (euros)",
-	            "document.title": "Joignez vos pièces justificatives",
-	            "resourceProof": "Preuve(s) de ressources",
-	            "resourceProof.placeholder": "Cliquer ou déposer votre preuve ici...",
-	            "inscriptionCertificate": "Certificat d'inscription",
-	            "inscriptionCertificate.placeholder": "Cliquer ou déposer votre certificat ici..."
-    		}
-    	},
-    	"payment" : {
-    		"title": "Paiement",
-    		"form": {
-    			"title": "Payez vos frais de dossier et pré-payez votre droit de timbre et vos taxes de séjour",
-    			"cardOwner": "Propriétaire de la carte",
-    			"cardNumber": "Numéro de carte",
-    			"cardExpiringDate": "Date d'expiration",
-    			"cardCV": "Code de vérification"
-    		}
-    	},
-    	"summary": {
-    		"title": "Paiement",
-    		"success": "Votre paiement s'est déroulé avec succès",
-    		"text1": "La complétude de votre dossier va être vérifiée par les authorités d'immigration françaises.",
-    		"text2": "Si le dossier est complet, vous recevez une notification vous invitant à prendre rendez-vous en ligne.",
-    		"text3": "Le cas échéant, vous recevez une requête pour le ou les élément(s) manquant(s) avec des instructions pour compléter votre demande.",
-    		"text4": "Lors du rendez-vous à l'Ambassade de France à Séoul, l'authenticité de votre passeport et de vos documents d'état civil sera vérifiée, et vos données biométriques enregistrées.",
-    		"text5": "A l'issue du rendez-vous, votre dossier sera instruit et vous recevrez une notification de la décision.",
-    		"text6": "Si la décision est favorable et après débit des taxes de séjour, vous serez invité à venir récupérer votre titre de séjour lorsqu'il est prêt.",
-    		"text7": "Si la décision est défavorable, vous aurez la possibilité de demander un recours."
-    	},
-    	"campus": {
-	        "title": "Je veux venir étudier en France",
-	        "form": {
-	        	"campus": "Avez-vous un compte Campus France ?",
-	        	"button": {
-	        		"yes": "Oui",
-	        		"no": "Non"
-	        	}
-	        }
-	    },
 	    "validation": {
 	    	"title": "{{studentName}} - Demande de séjour étudiant",
 	    	"identity": "Identité",
