--- a/src/main/webapp/i18n/en/etudier.json
+++ b/src/main/webapp/i18n/en/etudier.json
@@ -1,6 +1,6 @@
 {
     "etudier": {
-        "title": "Application for a student stay",
+        "page.title": "Application for a student stay",
         "step.title": "4 steps for your application",
         "identity": {
         	"step.short": "Identity",
