creation page rdv

--- a/src/main/webapp/i18n/fr/etudier.json
+++ b/src/main/webapp/i18n/fr/etudier.json
@@ -1,5 +1,6 @@
 {
     "etudier": {
+        "title": "Demande de séjour étudiant",
         "page.title": "Demande de séjour étudiant",
         "step.title": "4 étapes pour déposer votre demande",
         "identity": {
