--- a/src/main/webapp/i18n/fr/summary.json
+++ b/src/main/webapp/i18n/fr/summary.json
@@ -2,7 +2,7 @@
 	"summary" : {
 		"form": {
     		"success": "Votre paiement s'est déroulé avec succès",
-    		"text1": "La complétude de votre dossier va être vérifiée par les authorités d'immigration françaises.",
+    		"text1": "La complétude de votre dossier va être vérifiée par les autorités d'immigration françaises.",
     		"text2": "Si le dossier est complet, vous recevez une notification vous invitant à prendre rendez-vous en ligne.",
     		"text3": "Le cas échéant, vous recevez une requête pour le ou les élément(s) manquant(s) avec des instructions pour compléter votre demande.",
     		"text4": "Lors du rendez-vous à l'Ambassade de France à Séoul, l'authenticité de votre passeport et de vos documents d'état civil sera vérifiée, et vos données biométriques enregistrées.",
