--- a/src/main/webapp/i18n/fr/payment.json
+++ b/src/main/webapp/i18n/fr/payment.json
@@ -1,7 +1,9 @@
 {
 	"payment" : {
 		"form": {
-			"title": "Payez vos frais de dossier et pré-payez votre droit de timbre et vos taxes de séjour",
+			"title": "Payez vos frais de dossier et pré-payez vos taxes de séjour",
+			"text1": "Vos frais de dossier s'élèvent à 50,00 euros. Ils seront débités quelle que soit l'issue de votre demande.",
+			"text2": "Vos taxes de séjour s'élèvent à 77,00 euros. Elles ne seront débitées qu'en cas de décision favorable.",
 			"cardOwner": "Propriétaire de la carte",
 			"cardNumber": "Numéro de carte",
 			"cardExpiringDate": "Date d'expiration",
