creation page recevabilite + ajout page liste validation

--- a/src/main/webapp/i18n/en/validation.json
+++ b/src/main/webapp/i18n/en/validation.json
@@ -1,5 +1,13 @@
 {
 	"validation" : {
+		"list": {
+			"title": "Application list for final decision",
+			"firstName": "First Name",
+			"lastName": "Last Name",
+			"nationality": "Nationality",
+			"applicationType": "Application type",
+			"creationDate": "Creation date"
+		},
 		"form": {
 	    	"title": "{{studentName}} - Application for study",
 	    	"identity": "Identity",
