--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -15,6 +15,7 @@
             "account": {
                 "main": "Compte",
                 "settings": "Profil",
+                "rdv": "Rendez-vous",
                 "password": "Mot de passe",
                 "sessions": "Sessions",
                 "login": "S'authentifier",
