--- a/src/main/webapp/i18n/en/natureDemande.json
+++ b/src/main/webapp/i18n/en/natureDemande.json
@@ -2,9 +2,9 @@
     "sejourApp": {
         "NatureDemande" : {
             "SELECT": "{VALUE, select, sejour_etudiant{sejour_etudiant} sejour_salarie{sejour_salarie} sejour_competences_talents{sejour_competences_talents} other{}}",
-            "sejour_etudiant": "sejour_etudiant",
-            "sejour_salarie": "sejour_salarie",
-            "sejour_competences_talents": "sejour_competences_talents"
+            "sejour_etudiant": "Student stay",
+            "sejour_salarie": "Salary stay",
+            "sejour_competences_talents": "Talent stay"
         }
     }
 }
