creation page mon compte personnel

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -15,6 +15,7 @@
             "account": {
                 "main": "Account",
                 "settings": "Settings",
+                "personalAccount": "My account",
                 "rdv": "Rendez-vous",
                 "password": "Password",
                 "sessions": "Sessions",
