create nouveau menu accueil non identifie

--- a/src/main/webapp/i18n/en/main.json
+++ b/src/main/webapp/i18n/en/main.json
@@ -1,5 +1,13 @@
 {
     "main": {
+    	"page.title": "Home SIEF",
+    	"unknown": {
+    		"title": "Welcome on SIEF portal",
+    		"button": {
+    			"individual": "I am an individual",
+    			"company": "I am a company"
+    		}
+    	},
     	"usager": {
 	        "title": {
 		        "study": "I want to <strong>study</strong> in France",
